--- a/src/assets/scss/global/_base.scss
+++ b/src/assets/scss/global/_base.scss
@@ -64,3 +64,7 @@ svg {
 		transform-origin: inherit;
 	}
 }
+
+hr {
+	width: 100%;
+}
